--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -4,9 +4,10 @@ name: Automation
 
 # Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: '*/20 * * * *'
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -19,9 +20,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Runs automation script
+      - name: Run automation script
         shell: pwsh
+        run: ./script.ps1
         env:
           super_secret_information: ${{ secrets.MySuperSecretInformation }}
-        run: ./script.ps1
