--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -7,6 +7,8 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: '*/20 * * * *'
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
