--- a/.github/workflows/check-download-urls.yml
+++ b/.github/workflows/check-download-urls.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Check Download Urls Resonse Codes
+name: Check Download URLs Response Codes
 
 # Controls when the workflow will run
 on:
