--- a/.github/workflows/single-packages.yml
+++ b/.github/workflows/single-packages.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Single Packages Workflow
+name: Single Packages
 
 # Controls when the workflow will run
 on:
