--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -16,7 +16,11 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: windows-latest
-
+    
+    # Permissions for GITHUB_TOKEN
+    permissions:
+      pull-requests: write
+      
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
