--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-# wingetcreate-self-contained in workflow
-wingetcreate.exe
-/single-packages/wingetcreate.exe
-
-# manifests folder created while automated
-# generation of manifests
-/manifests/
-/single-packages/manifests/
+# winget-pkgs repository
+/winget-pkgs/
