--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -30,3 +30,5 @@ jobs:
       - name: Run automation script
         shell: pwsh
         run: ./automation.ps1
+        env:
+          GITHUB_TOKEN: {{ secrets.GITHUB_TOKEN }}
