--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -31,4 +31,4 @@ jobs:
         shell: pwsh
         run: ./automation.ps1
         env:
-          GITHUB_TOKEN: {{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN = ${{ secrets.GITHUB_TOKEN }}
