add github_token variable

--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -29,3 +29,5 @@ jobs:
       - name: Run automation script
         shell: pwsh
         run: ./automation.ps1
+        env:
+          GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
