--- a/packages/e/emuleproject.emule-community.json
+++ b/packages/e/emuleproject.emule-community.json
@@ -2,5 +2,9 @@
   "pkgid": "eMuleProject.eMule-community",
   "repo": "irwir/eMule",
   "last_checked_tag": "eMule_v0.60c-community",
-  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$"
+  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
+  "is_prerelease": false,
+  "version_method": null,
+  "custom_script": null,
+  "skip": null
 }
