--- a/packages/b/bdash-app.bdash.json
+++ b/packages/b/bdash-app.bdash.json
@@ -3,5 +3,9 @@
   "pkgid": "bdash-app.bdash",
   "repo": "bdash-app/bdash",
   "last_checked_tag": "v1.11.1",
-  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$"
+  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
+  "is_prerelease": false,
+  "version_method": null,
+  "custom_script": null,
+  "skip": null
 }
