--- a/packages/b/betaflight.betaflight-configurator.json
+++ b/packages/b/betaflight.betaflight-configurator.json
@@ -3,5 +3,9 @@
   "pkgid": "Betaflight.Betaflight-Configurator",
   "repo": "betaflight/betaflight-configurator",
   "last_checked_tag": "10.7.0",
-  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$"
+  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
+  "is_prerelease": false,
+  "version_method": null,
+  "custom_script": null,
+  "skip": null
 }
