--- a/packages/b/blocknetproject.blocknet.json
+++ b/packages/b/blocknetproject.blocknet.json
@@ -3,5 +3,9 @@
   "pkgid": "Blocknetproject.Blocknet",
   "repo": "blocknetdx/blocknet",
   "last_checked_tag": "v4.3.3",
-  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$"
+  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
+  "is_prerelease": false,
+  "version_method": null,
+  "custom_script": null,
+  "skip": null
 }
