--- a/.github/workflows/validate-json.yml
+++ b/.github/workflows/validate-json.yml
@@ -18,12 +18,13 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - shell: pwsh
+      - name: JSON validation
+        shell: pwsh
         run: |
           $packages = Get-ChildItem .\packages\ -Recurse -File | Select-Object -Property Name,FullName
           foreach ($json in $packages) {
               $package = Get-Content -Raw -Path $json.FullName
-              if ((Test-Json -Json $package -SchemaFile ./schema.json | Out-Null) -eq $false) {
+              if ((Test-Json -Json $package -SchemaFile ./schema.json) -eq $false) {
                   $jsonWithError += $json.Name
               }
           }
@@ -32,4 +33,8 @@ jobs:
                   Write-Host $i
               }
               exit 1
+          }
+          else
+          {
+            Write-Host -ForegroundColor Green "All JSONS are valid."
           }
