--- a/.github/workflows/validate-json.yml
+++ b/.github/workflows/validate-json.yml
@@ -22,11 +22,11 @@ jobs:
         shell: pwsh
         run: |
           $packages = Get-ChildItem .\packages\ -Recurse -File | Select-Object -Property Name,FullName
-          $jsonWithError = @()
+          $jsonWithError = [System.Collections.ArrayList]::new()
           foreach ($json in $packages) {
               $package = Get-Content -Raw -Path $json.FullName
               if ((Test-Json -Json $package -SchemaFile ./schema.json | Out-Null) -eq $false) {
-                  $jsonWithError += $json.Name
+                  $jsonWithError.Add($json.Name)
               }
           }
           if ($jsonWithError.Count -gt 0) {
