--- a/.github/workflows/validate-json.yml
+++ b/.github/workflows/validate-json.yml
@@ -22,17 +22,17 @@ jobs:
         shell: pwsh
         run: |
           $packages = Get-ChildItem .\packages\ -Recurse -File | Select-Object -Property Name,FullName
-          $jsonWithError = [System.Collections.ArrayList]::new()
           foreach ($json in $packages) {
               $package = Get-Content -Raw -Path $json.FullName
-              if ((Test-Json -Json $package -SchemaFile ./schema.json | Out-Null) -eq $false) {
-                  $jsonWithError.Add($json.Name)
+              if ((Test-Json -Json $package -SchemaFile ./schema.json) -eq $false) {
+                  $jsonWithError += @($json.Name)
               }
           }
           if ($jsonWithError.Count -gt 0) {
-              Write-Host "The following packages have errors:"
+              Clear-Host
+              Write-Host -ForegroundColor Red "The following packages have errors:"
               foreach ($i in $jsonWithError) {
-                  Write-Host "   $i" # Added spaces for indentation
+                  Write-Host -ForegroundColor Red "   $i" # Added spaces for indentation
               }
               exit 1
           }
