--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # winget-pkgs repository
 /winget-pkgs/
+
+# winget installation
+Microsoft.VCLibs.x64.14.00.Desktop.appx
+Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle
