--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -6,7 +6,7 @@ name: Automation
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: '0 */2 * * *'
+    - cron: '0 0 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   
