--- a/packages/o/obsproject.obsstudio.pre-release.json
+++ b/packages/o/obsproject.obsstudio.pre-release.json
@@ -2,8 +2,8 @@
   "$schema": "https://raw.githubusercontent.com/vedantmgoyal2009/winget-pkgs-automation/main/schema.json",
   "pkgid": "OBSProject.OBSStudio.Pre-release",
   "repo": "obsproject/obs-studio",
-  "last_checked_tag": "27.1.3",
-  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
+  "last_checked_tag": "27.1.0-rc3",
+  "asset_regex": ".*.exe$",
   "is_prerelease": true,
   "version_method": null,
   "custom_script": null,
