--- a/.github/ISSUE_TEMPLATE/package_request.yml
+++ b/.github/ISSUE_TEMPLATE/package_request.yml
@@ -18,7 +18,7 @@ body:
 - type: textarea
   attributes:
     label: Details about the application
-    description: Provide clear details about the new application you want to see added to the automation.
+    description: Provide some details about the new application you want to see added to the automation.
     placeholder: "Provide details of the new application that could be added to the automation. If known, please add details of an update source/API etc., where current versions of this application can be queried."
   validations:
     required: false
