--- a/.github/ISSUE_TEMPLATE/package_request.yml
+++ b/.github/ISSUE_TEMPLATE/package_request.yml
@@ -1,4 +1,4 @@
-name: Package request
+name: New Package
 description: Suggest a new package to be added to automation
 title: "[New Package]: "
 labels: new package
