--- a/.github/ISSUE_TEMPLATE/feat.yml
+++ b/.github/ISSUE_TEMPLATE/feat.yml
@@ -1,5 +1,6 @@
 name: Feature Request
 description: Request a new feature
+title: "[Feature/Idea]: "
 labels: [feat]
 assignees: vedantmgoyal2009
 body:
