--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -16,10 +16,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: windows-latest
-    permissions:
-      #contents: read
-      pull-requests: write
-
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -29,5 +26,5 @@ jobs:
       - name: Run automation script
         shell: pwsh
         run: ./automation.ps1
-        #env:
-        #  GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
