--- a/.github/workflows/pre-validation.yml
+++ b/.github/workflows/pre-validation.yml
@@ -41,12 +41,11 @@ jobs:
               }
           }
           Clear-Content -Path ./packages.txt
-          foreach ($PackageIdentifier in $package.pkgid | Where-Object { $package.skip -eq $false } | Sort-Object)
+          foreach ($pkg in ($package | Where-Object { $_.skip -eq $false }).pkgid | Sort-Object)
           {
-              $PackageIdentifier | Out-File -Encoding UTF8 -Append -Path ./packages.txt
+              $pkg | Out-File -Encoding UTF8 -Append -Path ./packages.txt
           }
           git config --global user.name 'winget-pkgs-automation'
           git config --global user.email '83997633+vedantmgoyal2009@users.noreply.github.com'
           git commit -m "Update packages.txt" -- ./packages.txt
           git push
-          
