--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,28 +1,14 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Automation
-
-# Controls when the workflow will run
 on:
   schedule:
-    # * is a special character in YAML so you have to quote this string
     - cron: '0 */8 * * *'
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: windows-latest
-    
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs automation script
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Run automation script
         shell: pwsh
         run: ./automation.ps1
