--- a/.github/workflows/powershell-analysis.yml
+++ b/.github/workflows/powershell-analysis.yml
@@ -28,7 +28,8 @@ jobs:
           # Check https://github.com/microsoft/action-psscriptanalyzer for more info about the options.
           # The below set up runs PSScriptAnalyzer to your entire repository and runs some basic security rules.
           path: .\
-          recurse: true 
+          recurse: true
+          excludeRule: '"PSAvoidUsingWriteHost", "PSAvoidUsingInvokeExpression", "PSAvoidUsingEmptyCatchBlock"'
           # Include your own basic security rules. Removing this option will run all the rules 
           # includeRule: '"PSAvoidGlobalAliases", "PSAvoidUsingConvertToSecureStringWithPlainText"'
           output: results.sarif
