--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,19 +6,19 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-on: [pull_request]
+on: [pull_request_target]
 
 jobs:
   label:
 
     runs-on: ubuntu-latest
-    #permissions:
-      #contents: read
-      #pull-requests: write
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
-    - uses: actions/labeler@v3
+    - uses: actions/labeler@v3.0.2
       with:
-        repo-token: "${{ secrets.MYSUPERSECRETINFORMATION }}"
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: '.github/labeler.yml'
         sync-labels: true
