--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,7 +6,8 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-on: [pull_request_target]
+# on: [pull_request]
+on: [pull_request_target] # Workaround from https://github.com/actions/labeler/issues/136
 
 jobs:
   label:
