--- a/packages/g/gorilladevs.gdlauncher.json
+++ b/packages/g/gorilladevs.gdlauncher.json
@@ -2,7 +2,7 @@
   "$schema": "https://raw.githubusercontent.com/vedantmgoyal2009/winget-pkgs-automation/main/schema.json",
   "pkgid": "GorillaDevs.GDLauncher",
   "repo_uri": "gorilla-devs/GDLauncher",
-  "last_checked_tag": "0",
+  "last_checked_tag": "50676657",
   "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
   "is_prerelease": false,
   "version_method": null,
