--- a/.github/workflows/check-download-urls.yml
+++ b/.github/workflows/check-download-urls.yml
@@ -14,17 +14,15 @@ jobs:
           $workingDir = Get-Location
           $ErrorActionPreference = 'Continue'
           git clone https://github.com/microsoft/winget-pkgs.git
-          <#
           Write-Host "Counting Download URLs..."
           "Counting Download URLs..." | Out-File -Append -FilePath $workingDir/a-myScript.txt
-          $DownUrls = gci .\manifests\1 -Recurse -File -Filter *.yaml|cat|sls 'InstallerUrl'|% {$_.ToString().Trim() -split '\s'|select -Last 1}|select -Unique
+          $DownUrls = Get-ChildItem .\manifests\ -Recurse -File -Filter *.yaml | Get-Content | Select-String 'InstallerUrl' | ForEach-Object { $_.ToString().Trim() -split '\s' | Select-Object -Last 1 } | Select-Object -Unique
           Write-Host "Total Download Urls`: $($DownUrls.Count)"
           "Total Download Urls`: $($DownUrls.Count)" | Out-File -Append -FilePath $workingDir/a-myScript.txt
-          #>
           Write-Host "Checking Codes for Download URLs..."
           "Checking Codes for Download URLs..." | Out-File -Append -FilePath $workingDir/a-myScript.txt
           Foreach ($Url in $DownUrls) {
-          $ResponseCode = curl -s -o /dev/null --max-time 3 -w "%{http_code}" $Url
+            $ResponseCode = curl -s -o /dev/null --max-time 3 -w "%{http_code}" $Url
             if ($ResponseCode -notin @("302","200","303","301") -or $Url.Contains("http://")) {
               "$ResponseCode`: $Url" | Out-File -Append -FilePath $workingDir/a-myScript.txt
             }
