--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,7 +6,7 @@ package-scripts:
 - 'package_scripts/**'
 automation-core:
 - 'automation.ps1'
-- 'YamlCreate/YamlCreate.ps1'
+- 'scripts/**'
 - '.github/**'
 add-contributor:
 - all: ['README.md','.all-contributorsrc']
