--- a/.github/workflows/fetch-old-versions.yml
+++ b/.github/workflows/fetch-old-versions.yml
@@ -9,6 +9,6 @@ jobs:
         uses: actions/checkout@v2.3.5
       - name: Run fetch-old-versions.ps1
         shell: pwsh
-        run: ./fetch-old-versions.ps1
+        run: ./scripts/FetchOldVersions.ps1
         env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
