--- a/packages/h/heroicgameslauncher.heroicgameslauncher.json
+++ b/packages/h/heroicgameslauncher.heroicgameslauncher.json
@@ -3,7 +3,7 @@
   "pkgid": "HeroicGamesLauncher.HeroicGamesLauncher",
   "repo_uri": "Heroic-Games-Launcher/HeroicGamesLauncher",
   "last_checked_tag": "51503765",
-  "asset_regex": ".*Setup.*\.exe$",
+  "asset_regex": ".*Setup.*.exe$",
   "is_prerelease": false,
   "version_method": null,
   "use_package_script": false,
