--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -1,7 +1,7 @@
 # winget-pkgs repository
 /winget-pkgs/
 
-# installing winget
+# winget install files in runner
 Microsoft.VCLibs.x64.14.00.Desktop.appx
 Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle
 9c0fe2ce7f8e410eb4a8f417de74517e_License1.xml
