Enhancements and bug fixes from development (#108)
* Continue Processing when Package encounters error

* Get URLs using pipeline

* Fix progress counter

* Update heroicgameslauncher.heroicgameslauncher.json

* Update heroicgameslauncher.heroicgameslauncher.json

* Add setup script

* Call setup script in FetchOldVersions.ps1

* Print messages in VerifyArpData.ps1

* Fixed calling of VerifyArpData script

* Move automation to scripts folder with some enhancements

* Change directory paths in files

* Fixed path of YamlCreate.ps1 in setup script

* Fixed VerifyArpData.ps1 reference in YamlCreate

* Fix path in README.md

* Update automation.yml

* Update README.md

Co-authored-by: Kaleb Luedtke <trenlymc@gmail.com>

--- a/packages/h/heroicgameslauncher.heroicgameslauncher.json
+++ b/packages/h/heroicgameslauncher.heroicgameslauncher.json
@@ -3,7 +3,7 @@
   "pkgid": "HeroicGamesLauncher.HeroicGamesLauncher",
   "repo_uri": "Heroic-Games-Launcher/HeroicGamesLauncher",
   "last_checked_tag": "51503765",
-  "asset_regex": ".(exe|msi|msix|appx)(bundle){0,1}$",
+  "asset_regex": ".*Setup.*.exe$",
   "is_prerelease": false,
   "version_method": null,
   "use_package_script": false,
