--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v2.3.5
       - name: Run automation script
         shell: pwsh
-        run: ./automation.ps1
+        run: ./scripts/Automation.ps1
         env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
