--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -5,12 +5,12 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2.3.5
       - name: Run automation script
         shell: pwsh
-        run: ./scripts/Automation.ps1
+        run: Set-Location .\scripts; .\Automation.ps1
         env:
           GITHUB_TOKEN: ${{ secrets.MYSUPERSECRETINFORMATION }}
