--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -4,7 +4,7 @@ new package:
 - 'packages/**'
 package-scripts:
 - 'package_scripts/**'
-automation-core:
+automation:
 - 'scripts/**'
 - '.github/**'
 add-contributor:
