--- a/.github/workflows/pre-validation.yml
+++ b/.github/workflows/pre-validation.yml
@@ -1,9 +1,9 @@
 name: Pre-validation
 on:
   push:
-    branches: main
+    branches: [main]
   pull_request:
-    branches: main
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
         shell: pwsh
         run: |
           (Get-ChildItem .\packages\ -Recurse -File | Get-Content -Raw | Where-Object { Test-Json -Json $_ -SchemaFile .\schema.json -ErrorAction SilentlyContinue } | ConvertFrom-Json | Where-Object { $_.skip -eq $false }).pkgid | Sort-Object | Out-File -Encoding UTF8 -Path .\packages.txt
-          git config --global user.name 'winget-pkgs-automation'
-          git config --global user.email '83997633+vedantmgoyal2009@users.noreply.github.com'
-          git commit -m "Update packages.txt [Automatic Update]" -- ./packages.txt
+          git config --local user.name 'winget-pkgs-automation-bot[bot]'
+          git config --local user.email '93540089+winget-pkgs-automation-bot[bot]@users.noreply.github.com'
+          git commit -m "Update packages.txt" -- ./packages.txt
           git push
