Update labeler workflow

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,8 +1,7 @@
 documentation:
 - all: ['README.md']
-new package:
+packages:
 - 'packages/**'
-package-scripts:
 - 'package_scripts/**'
 automation:
 - 'scripts/**'
