--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -17,7 +17,7 @@ jobs:
       contents: read
       pull-requests: write
     steps:
-    - run: gem install jwt openssl
+    - run: sudo gem install jwt openssl
     - run: Write-Output "GITHUB_TOKEN=$((Invoke-RestMethod -Method Post -Headers @{Authorization = "Bearer $($env:JWT_RB | ruby)"; Accept = "application/vnd.github.v3+json"} -Uri "https://api.github.com/app/installations/$env:THIS_ID/access_tokens").token)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       shell: pwsh
       env:
