--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -54,7 +54,7 @@
     },
     {
       "login": "vedantmgoyal2009",
-      "name": "Vedant Mohan Goyal",
+      "name": "Vedant",
       "avatar_url": "https://avatars.githubusercontent.com/u/83997633?v=4",
       "profile": "https://bittu.eu.org",
       "contributions": [
